# Vehicle_to_Infrastructure_Thesis

./: CMakeLists.txt  README.md  package.xml
include/: conversion.h  conversion.h~  main.h  main.h~  robot.h
src/: main.cpp  main.cpp~  sample_base_test_node.cpp  sample_base_test_node.cpp~  sample_base_test_node_with_class.cpp  sample_base_test_node_with_class.cpp~  serial_communication_node.cpp  serial_communication_node.cpp~  vector_conversion.cpp  vector_conversion.cpp~
