<?xml version="1.0"?>
<package>
  <name>v2I_communication</name>
  <version>0.0.0</version>
  <description>Example package for using http://wjwwood.io/serial/ library</description>

  <author email="tn01391@georgiasouthern.edu">Tyler Naes</author>

  <maintainer email="tn01391@georgiasouthern.edu">Tyler Naes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>

</package>
